--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-03  Adriano Winter Bess  <adriano@xfce.org>
+
+	* pt_BR.po: Updated brazilian portuguese translations.
+
 2006-10-29  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Fixed some spelling mistakes in the French translation.
