2006-11-04	Benedikt Meurer <benny@xfce.org>
	* === Released 0.3.1.12rc2 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.




(Old svn revision: 23648)

--- a/THANKS
+++ b/THANKS
@@ -31,6 +31,9 @@ These people have translated libexo to foreign languages.
  Fabian Nowak <timystery@arcor.de>
   * de translations
 
+ Sonam Pelden <sonaa_peldn@yahoo.com>
+  * dz translations
+
  Stathis Kamperis <ekamperi@auth.gr>
   * el translations
 
@@ -66,6 +69,9 @@ These people have translated libexo to foreign languages.
 
  Szervác Attila <sas@321.hu>
   * hu translations
+
+ Dario DOE <dariolinux@tiscali.it>
+  * it translations
 
  Daichi Kawahata <daichik@users.sourceforge.net>
   * ja translations
