--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-11-04	Benedikt Meurer <benny@xfce.org>
 
+	* === Released 0.3.1.12rc2 ===
+	* NEWS, configure.in.in: Bump version.
+	* THANKS: Update translator credits.
+	* po/*.po: Update Project-Id-Version.
+
+2006-11-04	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-url.c(exo_url_show_on_screen): Need to escape commata in
 	  URLs passed to web browsers and mail readers, because some of them,
 	  i.e. Firefox and Thunderbird, will otherwise strip offs the part
