--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+0.3.1.12rc2
+===========
+- Added a --working-directory command line switch to exo-open, which primarily
+  useful to start the TerminalEmulator's in a specific directory.
+- Import french translations of the user manual (#2478).
+- Fix double click somethimes requiring a third click (#2259).
+- Fix crash in the icon chooser with internal icons (#2488).
+- Fix installation on Win32 variants (#2463).
+- Fix detection of email addresses with underscores in the username (#2453).
+- Escape commata in URLs prior to passing the URLs to the web browser or the
+  mail reader, as some helper applications, namely Firefox and Thunderbird,
+  cannot handle URLs with commata (#2454).
+- Updated translations: Pau Rul-lan Ferragut (ca), Michal Várady (cs), Benedikt
+			Meurer (de), Piarres Beobide (eu), Jari Rahkonen (fi),
+			Maximilian Schleiss (fr), Piotr Maliński (pl), Adriano
+			Winter Bess (pt_BR), Andrey Fedoseev (ru)
+- New translations: Sonam Pelden (dz), Dario DOE (it)
+
+
 0.3.1.10rc1
 ===========
 - Added a new ExoIconChooserDialog widget to pick an icon from either the
@@ -20,7 +39,7 @@
 - Use the GSlice allocator where possible to further reduce memory overhead.
 - Update the API documentation, adding a visual index for the available widgets.
 - Updated translations: Michal Varady (cs), Benedikt Meurer and Fabian Nowak
-                        (de), Stavros Giannouris (el), Piarres Beobide (eu),
+			(de), Stavros Giannouris (el), Piarres Beobide (eu),
 			Jari Rahkonen (fi), Maximilian Schleiss (fr), Piotr
 			Maliński and Szymon Kałasz (pl), Tomás Acauan Schertel
 			(pt_BR)
