--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-04  Benedikt Meurer <benny@xfce.org>
+
+	* *.po: Update Project-Id-Version.
+
 2006-11-03  Adriano Winter Bess  <adriano@xfce.org>
 
 	* pt_BR.po: Updated brazilian portuguese translations.
