--- a/po/dz.po
+++ b/po/dz.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce/libexo-0.3.p\n"
+"Project-Id-Version: exo 0.3.1.12rc2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-10 13:35+0200\n"
 "PO-Revision-Date: 2006-10-20 09:45+0530\n"
