--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@
 # Dario <dariolinux@tiscali.it>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: it\n"
+"Project-Id-Version: exo 0.3.1.12rc2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-10 13:35+0200\n"
 "PO-Revision-Date: 2006-09-20 00:10+0200\n"
