Updated Dutch libexo translation
(Old svn revision: 23774)

--- a/po/nl.po
+++ b/po/nl.po
@@ -76,7 +76,7 @@ msgstr ""
 
 #: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:928
 msgid "Text column"
-msgstr ""
+msgstr "Tekst kolom"
 
 #: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:929
 msgid "Model column used to retrieve the text from"
@@ -625,7 +625,7 @@ msgstr ""
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:443
 msgid "Run in _terminal"
-msgstr ""
+msgstr "Uitvoeren in _terminal"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:444
 msgid "Select this option to run the command in a terminal window."
@@ -713,22 +713,22 @@ msgstr ""
 #. create failed, ask the user to specify a file name
 #: ../exo-desktop-item-edit/main.c:365
 msgid "Choose filename"
-msgstr ""
+msgstr "Kies bestandsnaam"
 
 #: ../exo-desktop-item-edit/main.c:419
 #, c-format
 msgid "Failed to create \"%s\"."
-msgstr ""
+msgstr "Het maken van \"%s\" is mislukt."
 
 #: ../exo-desktop-item-edit/main.c:419
 #, c-format
 msgid "Failed to save \"%s\"."
-msgstr ""
+msgstr "Het opslaan van \"%s\" is mislukt."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:100
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
 msgid "Preferred Applications"
-msgstr "Voorkeurs Programma's"
+msgstr "Standaard Programma's"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:101
 msgid "Select default applications for various services"
@@ -739,21 +739,23 @@ msgstr ""
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:125
 msgid "Internet"
-msgstr ""
+msgstr "Internet"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:138
 msgid "Web Browser"
-msgstr ""
+msgstr "Web Browser"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:146
 msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
+"De standaard Web Browser zal gebruikt worden om\n"
+"hyperlinks te openen en help pagina's weer te geven."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:170
 msgid "Mail Reader"
-msgstr ""
+msgstr "Mail Lezer"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:178
 msgid ""
@@ -770,7 +772,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:211
 msgid "Terminal Emulator"
-msgstr ""
+msgstr "Terminal Emulator"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:219
 msgid ""
@@ -890,131 +892,131 @@ msgstr ""
 
 #: ../exo-helper/exo-preferred-applications-settings.c:60
 msgid "Button Label|Preferred Applications"
-msgstr ""
+msgstr "Standaard Programma's"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr ""
+msgstr "Standaard Programma's (Web Browser, Mail Lezer en Terminal Emulator)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
 msgid "Xfce 4 Preferred Applications"
-msgstr ""
+msgstr "Xfce 4 Standaard Programma's"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.in.h:1
 msgid "Xfce Terminal"
-msgstr ""
+msgstr "Xfce Terminal"
 
 #: ../exo-helper/helpers/aterm.desktop.in.in.h:1
 msgid "aterm"
-msgstr ""
+msgstr "aterm"
 
 #: ../exo-helper/helpers/balsa.desktop.in.in.h:1
 msgid "Balsa"
-msgstr ""
+msgstr "Balsa"
 
 #: ../exo-helper/helpers/debian-sensible-browser.desktop.in.in.h:1
 msgid "Debian Sensible Browser"
-msgstr ""
+msgstr "Debian Sensible Browser"
 
 #: ../exo-helper/helpers/debian-x-terminal-emulator.desktop.in.in.h:1
 msgid "Debian X Terminal Emulator"
-msgstr ""
+msgstr "Debian X Terminal Emulator"
 
 #: ../exo-helper/helpers/encompass.desktop.in.in.h:1
 msgid "Encompass"
-msgstr ""
+msgstr "Encompass"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.in.h:1
 msgid "Epiphany Web Browser"
-msgstr ""
+msgstr "Epiphany Web Browser"
 
 #: ../exo-helper/helpers/eterm.desktop.in.in.h:1
 msgid "Enlightened Terminal Emulator"
-msgstr ""
+msgstr "Enlightened Terminal Emulator"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
 msgid "Novell Evolution"
-msgstr ""
+msgstr "Novell Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
-msgstr ""
+msgstr "Mozilla Firefox"
 
 #: ../exo-helper/helpers/galeon.desktop.in.in.h:1
 msgid "Galeon Web Browser"
-msgstr ""
+msgstr "Galeon Web Browser"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.in.h:1
 msgid "GNOME Terminal"
-msgstr ""
+msgstr "GNOME Terminal"
 
 #: ../exo-helper/helpers/kmail.desktop.in.in.h:1
 msgid "KMail"
-msgstr ""
+msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.in.h:1
 msgid "Konqueror Web Browser"
-msgstr ""
+msgstr "Konqueror Web Browser"
 
 #: ../exo-helper/helpers/links.desktop.in.in.h:1
 msgid "Links Text Browser"
-msgstr ""
+msgstr "Links Tekst Browser"
 
 #: ../exo-helper/helpers/lynx.desktop.in.in.h:1
 msgid "Lynx Text Browser"
-msgstr ""
+msgstr "Lynx Tekst Browser"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.in.h:1
 msgid "Mozilla Browser"
-msgstr ""
+msgstr "Mozilla Browser"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.in.h:1
 msgid "Mozilla Mail"
-msgstr ""
+msgstr "Mozilla Mail"
 
 #: ../exo-helper/helpers/mutt.desktop.in.in.h:1
 msgid "Mutt"
-msgstr ""
+msgstr "Mutt"
 
 #: ../exo-helper/helpers/netscape-navigator.desktop.in.in.h:1
 msgid "Netscape Navigator"
-msgstr ""
+msgstr "Netscape Navigator"
 
 #: ../exo-helper/helpers/nxterm.desktop.in.in.h:1
 msgid "NXterm"
-msgstr ""
+msgstr "NXTerm"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.in.h:1
 msgid "Opera Browser"
-msgstr ""
+msgstr "Opera Browser"
 
 #: ../exo-helper/helpers/opera-mailer.desktop.in.in.h:1
 msgid "Opera Mail"
-msgstr ""
+msgstr "Opera Mail"
 
 #: ../exo-helper/helpers/sylpheed-claws.desktop.in.in.h:1
 msgid "Sylpheed Claws"
-msgstr ""
+msgstr "Sylpheed Claws"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
-msgstr ""
+msgstr "Sylpheed"
 
 #: ../exo-helper/helpers/thunderbird.desktop.in.in.h:1
 msgid "Mozilla Thunderbird"
-msgstr ""
+msgstr "Mozilla Thunderbird"
 
 #: ../exo-helper/helpers/urxvt.desktop.in.in.h:1
 msgid "RXVT Unicode"
-msgstr ""
+msgstr "RXVT Unicode"
 
 #: ../exo-helper/helpers/w3m.desktop.in.in.h:1
 msgid "W3M Text Browser"
-msgstr ""
+msgstr "W3M Tekst Browser"
 
 #: ../exo-helper/helpers/xterm.desktop.in.in.h:1
 msgid "X Terminal"
-msgstr ""
+msgstr "X Terminal"
 
 #: ../exo-open/main.c:59
 msgid "Usage: exo-open [URLs...]"
@@ -1061,6 +1063,9 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
+" WebBrowser        - De standaard Browser .\n"
+" Mail Lezer        - De standaard Mail Lezer.\n"
+" TerminalEmulator  - De standaard Terminal Emulator."
 
 #: ../exo-open/main.c:82
 msgid ""
@@ -1079,4 +1084,4 @@ msgstr ""
 #: ../exo-open/main.c:169
 #, c-format
 msgid "Failed to open URL \"%s\"."
-msgstr ""
+msgstr "Het openen van URL \"%s\" is mislukt."
