--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-14  Jean-François Wauthy <pollux@xfce.org>
+
+	* cy.po: Add Welsh translations by Geraint Rowlands <ansbaradigeidfran@gmail.com>
+
 2006-11-04  Benedikt Meurer <benny@xfce.org>
 
 	* *.po: Update Project-Id-Version.
