Updated the Spanish translations by Rudy Godoy for the following packages 	xfce4-panel; xfce4-session Modified the description text of the translation files for fr cy and es Fixed typo in French translation of thunar
(Old svn revision: 23886)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,12 @@
+2006-11-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* cy.po: Modified description text
+	* fr.po: Modified description text
+
 2006-11-14  Jean-François Wauthy <pollux@xfce.org>
 
-	* cy.po: Add Welsh translations by Geraint Rowlands <ansbaradigeidfran@gmail.com>
+	* cy.po: Add Welsh translations
+	by Geraint Rowlands <ansbaradigeidfran@gmail.com>
 
 2006-11-04  Benedikt Meurer <benny@xfce.org>
 
