--- a/po/cy.po
+++ b/po/cy.po
@@ -1,8 +1,8 @@
-# translation of exo package to Welsh
-# Copyright (C) 2004-2006 Geraint Rowlands
-# This file is distributed under the same license as the exo package.
-#
+# Welsh translation of the libexo package.
+# Copyright (C) 2004-2006 os-cillation e.K.
+# This file is distributed under the same license as the libexo package.
 # Geraint Rowlands <ansbaradigeidfran@gmail.com>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: cy\n"
