--- a/po/fr.po
+++ b/po/fr.po
@@ -1,6 +1,6 @@
-# French translations for exo package.
+# French translation of the libexo package.
 # Copyright (C) 2004-2006 os-cillation e.K.
-# This file is distributed under the same license as the exo package.
+# This file is distributed under the same license as the libexo package.
 # Stephane Roy <sroy@j2n.net>, 2005-2006.
 # Maximilian Schleiss <maxschleiss@bluewin.ch>, 2006.
 #
