--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-19  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* pt_BR.po: Added Brazilian translation and updated LINGUAS
+	by Gunther Furtado <gunzera0@yahoo.com.br>
+
 2006-10-28  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Added French translation and updated LINGUAS.
