E-mail address change. Sorry for the noise.
(Old svn revision: 24013)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -92,7 +92,7 @@
 	* de.po: Updated German translations
 	* ka.po: Add Georgian translations
 
-2006-08-27  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-08-27  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Greek translations update
 
@@ -173,11 +173,11 @@
 
 	* *.po: Update Project-Id-Version.
 
-2006-07-07  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-07-07  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Minor corrections.
 
-2006-06-25  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-06-25  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translations.
 
@@ -253,7 +253,7 @@
 	* pl.po: Updated Polish translations by Piotr Malinski
 	  <admin@rk.edu.pl>.
 
-2006-05-07  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-05-07  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Greek translation update.
 
@@ -275,7 +275,7 @@
 
 	* pt_BR.po: Updated Brazilian Portuguese translations.
 
-2006-05-06  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-05-06  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Greek translation update.
 
@@ -400,7 +400,7 @@
 	* ja.po: Updated Japanese translations.
 	* LINGUAS: Added missing language codes.
 
-2006-04-15  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-04-15  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translation.
 
@@ -428,7 +428,7 @@
 
 	* ca.po: [i18n] catalan little of work on catalan translations
 
-2006-04-01  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-04-01  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translation by Stathis Kamperis
 
@@ -475,7 +475,7 @@
 	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
 	  ja.po, libexo-0.3.pot, pt_BR.po: Updated.
 
-2006-03-03  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-03-03  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translations
 
@@ -498,7 +498,7 @@
 	* fi.po: Updated Finnish translations by Jari Rahkonen
 	  <jari.rahkonen@pp2.inet.fi>.
 
-2006-02-24  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-02-24  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translation
 
@@ -519,7 +519,7 @@
 	  ja.po, libexo-0.3.pot, pt_BR.po: Merge changed/new strings.
 	* de.po: Update the german translations.
 
-2006-02-22  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-02-22  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translations
 
@@ -596,7 +596,7 @@
 
 	* ja.po: Updated Japanese translations.
 
-2005-11-27  Stavros Giannouris <stavrosg2002@freemail.gr>
+2005-11-27  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translation.
 
@@ -646,7 +646,7 @@
 
 	* de.po, en_GB.po, es.po, fi.po, fr.po, ja.po: Updated.
 
-2005-10-16 Stavros Giannouris <stavrosg2002@freemail.gr>
+2005-10-16 Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Add Greek translations in libexo/trunk
 
