--- a/THANKS
+++ b/THANKS
@@ -37,7 +37,7 @@ These people have translated libexo to foreign languages.
  Stathis Kamperis <ekamperi@auth.gr>
   * el translations
 
- Stavros Giannouris <stavrosg2002@freemail.gr>
+ Stavros Giannouris <stavrosg@serverhive.com>
   * el translations
 
  Dwayne Bailey <dwayne@translate.org.za>
