--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* ru.po: Updated the Russian translation by
+	Andrey Fedoseev <andrey.fedoseev@gmail.com>
 2006-11-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* cy.po: Modified description text
