--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* mk.po: Added the Macedonian translation by
+	Pavle Jonoski <jonoski.pavle@gmail.com>
+
 2006-12-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* ru.po: Updated the Russian translation by
