--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-28	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c: Several code cleanups.
+
 2006-11-11	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-url.c: Detect complex mailto:-URLs properly. Bug #2530.
