Updated Dutch translation
(Old svn revision: 24242)

--- a/po/nl.po
+++ b/po/nl.po
@@ -92,7 +92,7 @@ msgstr ""
 
 #: ../exo/exo-icon-bar.c:312
 msgid "Active"
-msgstr ""
+msgstr "Actief"
 
 #: ../exo/exo-icon-bar.c:313
 msgid "Active item index"
@@ -155,7 +155,7 @@ msgstr "Emblemen"
 #. EXO_ICON_CHOOSER_CONTEXT_EMOTES
 #: ../exo/exo-icon-chooser-dialog.c:97
 msgid "Emoticons"
-msgstr ""
+msgstr "Emoticons"
 
 #. EXO_ICON_CHOOSER_CONTEXT_INTERNATIONAL
 #: ../exo/exo-icon-chooser-dialog.c:99
@@ -211,7 +211,7 @@ msgstr "Aantal kolommen"
 
 #: ../exo/exo-icon-view.c:670
 msgid "Number of columns to display"
-msgstr ""
+msgstr "Aantal weer te geven kolommen"
 
 #: ../exo/exo-icon-view.c:684
 msgid "Enable Search"
@@ -346,7 +346,7 @@ msgstr ""
 
 #: ../exo/exo-thumbnail-preview.c:139 ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
-msgstr ""
+msgstr "Geen bestand geselecteerd"
 
 #: ../exo/exo-thumbnail-preview.c:299
 msgid "Block Device"
@@ -362,11 +362,11 @@ msgstr "Map"
 
 #: ../exo/exo-thumbnail-preview.c:314
 msgid "FIFO"
-msgstr ""
+msgstr "FIFO"
 
 #: ../exo/exo-thumbnail-preview.c:319
 msgid "Socket"
-msgstr ""
+msgstr "Socket"
 
 #: ../exo/exo-toolbars-editor-dialog.c:126
 msgid "_Add a new toolbar"
@@ -388,7 +388,7 @@ msgstr ""
 
 #: ../exo/exo-toolbars-view.c:766
 msgid "_Desktop Default"
-msgstr ""
+msgstr "_Bureaublad Standaard"
 
 #: ../exo/exo-toolbars-view.c:775
 msgid "_Icons only"
@@ -422,12 +422,12 @@ msgstr "Kan \"%s\" niet openen"
 #: ../exo/exo-url.c:309
 #, c-format
 msgid "The URL \"%s\" is not supported"
-msgstr ""
+msgstr "De URL \"%s\" wordt niet ondersteund"
 
 #: ../exo/exo-url.c:381
 #, c-format
 msgid "Failed to open \"%s\"."
-msgstr ""
+msgstr "Kan \"%s\" niet openen"
 
 #: ../exo/exo-wrap-table.c:160
 msgid "Column spacing"
@@ -533,7 +533,7 @@ msgstr ""
 #. allocate the file chooser
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:290
 msgid "Select an Application"
-msgstr ""
+msgstr "Selecteer een Programma."
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:299
 #: ../exo-helper/exo-helper-chooser.c:432
@@ -1049,10 +1049,13 @@ msgid ""
 "applications\n"
 "                                      when using the --launch option."
 msgstr ""
+"  --working-directory DIRECTORY       Standaard werk map voor "
+"programma's\n"
+"                                      wanneer de --lauch optie wordt gebruikt."
 
 #: ../exo-open/main.c:72
 msgid "The following TYPEs are supported for the --launch command:"
-msgstr ""
+msgstr "De volgende TYPEs zijn ondersteund voor het --launch commando:"
 
 #. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
@@ -1064,7 +1067,7 @@ msgid ""
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
 " WebBrowser        - De standaard Browser .\n"
-" Mail Lezer        - De standaard Mail Lezer.\n"
+" MailReader        - De standaard Mail Lezer.\n"
 " TerminalEmulator  - De standaard Terminal Emulator."
 
 #: ../exo-open/main.c:82
@@ -1079,7 +1082,7 @@ msgstr ""
 #: ../exo-open/main.c:148
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
-msgstr ""
+msgstr "Het uitvoeren van het voorkeurs programma voor categorie \"%s\" is mislukt."
 
 #: ../exo-open/main.c:169
 #, c-format
