2007-01-03	Benedikt Meurer <benny@xfce.org>
	* configure.in.in, exo-csource/main.c, exo-open/main.c,
	  exo-desktop-item-edit/main.c: Update copyright dates.
	* po/libexo-0.3.pot, po/*.po: Merge changed strings.
	* po/de.po: Update german translations.




(Old svn revision: 24256)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-03  Benedikt Meurer <benny@xfce.org>
+
+	* libexo-0.3.pot, *.po: Merge changed strings.
+	* de.po: Update german translations.
+
 2006-12-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* mk.po: Added the Macedonian translation by
