--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-01-03	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, exo-csource/main.c, exo-open/main.c,
+	  exo-desktop-item-edit/main.c: Update copyright dates.
+	* po/libexo-0.3.pot, po/*.po: Merge changed strings.
+	* po/de.po: Update german translations.
+
 2006-12-28	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c: Several code cleanups.
