libexo Basque trasnaltion updated
(Old svn revision: 24262)

--- a/po/eu.po
+++ b/po/eu.po
@@ -517,7 +517,7 @@ msgstr "  --build-list      Bikoteak (izena, fitxategia) analizatu\n"
 
 #: ../exo-csource/main.c:248 ../exo-desktop-item-edit/main.c:153
 #: ../exo-open/main.c:129
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Copyright (c) %s\n"
 "        os-cillation e.K. All rights reserved.\n"
@@ -528,7 +528,7 @@ msgstr ""
 "Copyright (c) 2005-2006\n"
 "        os-cillation e.K. All rights reserved.\n"
 "\n"
-"Written by Benedikt Meurer <benny@xfce.org>.\n"
+"Benedikt Meurer-ek <benny@xfce.org> idatzia.\n"
 "\n"
 
 #: ../exo-csource/main.c:252 ../exo-desktop-item-edit/main.c:157
