--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-04  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Updated Basque translation.
+
 2007-01-03  Benedikt Meurer <benny@xfce.org>
 
 	* libexo-0.3.pot, *.po: Merge changed strings.
