--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-05  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Updated the French translation.
+
 2007-01-04  Piarres Beobide <pi@beobide.net>
 
         * eu.po: Updated Basque translation.
