--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+2007-01-06	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, Makefile.am, exo-mount/: Add mount utility, that
+	  uses HAL if available, but can also operate without HAL. This is
+	  necessary because other mount utilities like gnome-mount or pmount
+	  do not always work properly, esp. with devices such as floppy
+	  drives. Even worse those utilities behave differently depending on
+	  the underlying system, and thunar-vfs already contains too many
+	  work arounds for such messy stuff.
+	* configure.in.in, Makefile.am, exo-mount-notify/: Add an optional
+	  internal mount notify, which notifies the user that a device is
+	  being released by the system, and gives him a hint when the device
+	  can be removed physically. This requires a running notification
+	  daemon.
+	* exo-desktop-item-edit/main.c(main): Update string to avoid
+	  duplicated strings in the translations.
+	* po/POTFILES.in: Add new files here.
+	* po/libexo-0.3.pot, po/*.po: Merge new strings.
+	* po/de.po: Update german translations.
+
 2007-01-03	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in, exo-csource/main.c, exo-open/main.c,
