--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,10 +1,16 @@
+2007-01-06  Benedikt Meurer <benny@xfce.org>
+
+	* POTFILES.in: Add new files here.
+	* libexo-0.3.pot, *.po: Merge new strings.
+	* de.po: Update german translations.
+
 2007-01-05  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Updated the French translation.
 
 2007-01-04  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Updated Basque translation.
+	* eu.po: Updated Basque translation.
 
 2007-01-03  Benedikt Meurer <benny@xfce.org>
 
