--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-06	Benedikt Meurer <benny@xfce.org>
 
+	* exo-mount/exo-mount-fstab.c: Add missing <errno.h> include.
+
+2007-01-06	Benedikt Meurer <benny@xfce.org>
+
 	* configure.in.in, Makefile.am, exo-mount/: Add mount utility, that
 	  uses HAL if available, but can also operate without HAL. This is
 	  necessary because other mount utilities like gnome-mount or pmount
